--- a/Arbeidskrav_1/style.css
+++ b/Arbeidskrav_1/style.css
@@ -40,13 +40,14 @@ main{
             display: flex;
             height: 100%;
             column-gap: .5rem;
+            width: 100%;
 
 
             li{
                 cursor: pointer;
                 background-color: var(--dark_blue);
                 color: var(--white);
-                padding: 1.5rem 2.8rem;
+                padding: 1.5rem 2.85rem;
                 margin: auto;
                 font-family: var(--font);
                 font-size: 1rem;
