--- a/Arbeidskrav_1/style.css
+++ b/Arbeidskrav_1/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 *{
     margin: 0;
@@ -11,7 +11,7 @@
     --blue: #58699D;
     --whitesmoke: #E1E5EE;
     --white: #fff;
-    --font: "Rubik", serif;
+    --font: "Roboto", serif;
 }
 
 body{
@@ -39,7 +39,7 @@ main{
             width: fit-content;
             display: flex;
             height: 100%;
-            column-gap: .5rem;
+            column-gap: .9rem;
             width: 100%;
 
 
@@ -47,11 +47,11 @@ main{
                 cursor: pointer;
                 background-color: var(--dark_blue);
                 color: var(--white);
-                padding: 1.5rem 2.85rem;
+                padding: 1.5rem 2.9rem;
                 margin: auto;
                 font-family: var(--font);
                 font-size: 1rem;
-                font-weight: bold;
+                font-weight:900;
             }
             li:hover{
                 background-color: var(--blue);
